[metadata]
name = pycobolt
version = 0.1.0
description = SDK for system integration of Cobolt Lasers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject ##fixa
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues ##fixa
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License  ##fixa


[options]
packages = pycobolt
install_requires =
    pyserial >= 3.5
package_dir =
    = pycobolt
python_requires = >=3.6


[options.packages.find]
where = pycobolt